--- a/Alert/app/build.gradle
+++ b/Alert/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "com.example.faizmohideen.alert"
+        applicationId "org.alertpreparedness.platform.alert"
         minSdkVersion 15
         targetSdkVersion 26
         versionCode 1
