--- a/Alert/app/build.gradle
+++ b/Alert/app/build.gradle
@@ -3,8 +3,8 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "com.example.faizmohideen.alert"
-        minSdkVersion 15
+        applicationId "org.alertpreparedness.platform.alert"
+        minSdkVersion 16
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -31,4 +31,38 @@ dependencies {
 
     // Glide image library
     implementation 'com.github.bumptech.glide:glide:3.7.0'
+
+    //time processing
+    compile 'net.danlew:android.joda:2.9.9.1'
+
+    // FAB
+    compile 'com.github.clans:fab:1.6.4'
+
+    // Firebase
+    compile 'com.google.firebase:firebase-core:11.4.2'
+    compile 'com.google.firebase:firebase-database:11.4.2'
+    compile 'com.google.firebase:firebase-auth:11.4.2'
+    compile 'com.google.firebase:firebase-storage:11.4.2'
+    compile 'com.google.firebase:firebase-messaging:11.4.2'
+    compile 'com.google.firebase:firebase-crash:11.4.2'
+
+    //toast
+    compile 'com.github.GrenderG:Toasty:1.2.5'
+
+    //compress
+    compile 'top.zibin:Luban:1.1.3'
+
+    //memory leak
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5.4'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.4'
+
+    //log
+    implementation 'com.jakewharton.timber:timber:4.6.0'
+
+    //views
+    compile 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 }
+
+// ADD THIS AT THE BOTTOM
+apply plugin: 'com.google.gms.google-services'
