--- a/Alert/app/build.gradle
+++ b/Alert/app/build.gradle
@@ -16,10 +16,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:support-v4:26.1.0'
@@ -28,16 +32,12 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
-
     // Glide image library
     implementation 'com.github.bumptech.glide:glide:3.7.0'
-
     //time processing
     compile 'net.danlew:android.joda:2.9.9.1'
-
     // FAB
     compile 'com.github.clans:fab:1.6.4'
-
     // Firebase
     compile 'com.google.firebase:firebase-core:11.4.2'
     compile 'com.google.firebase:firebase-database:11.4.2'
@@ -45,20 +45,15 @@ dependencies {
     compile 'com.google.firebase:firebase-storage:11.4.2'
     compile 'com.google.firebase:firebase-messaging:11.4.2'
     compile 'com.google.firebase:firebase-crash:11.4.2'
-
     //toast
     compile 'com.github.GrenderG:Toasty:1.2.5'
-
     //compress
     compile 'top.zibin:Luban:1.1.3'
-
     //memory leak
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5.4'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.4'
-
     //log
     implementation 'com.jakewharton.timber:timber:4.6.0'
-
     //views
     compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
