--- a/Alert/app/src/main/AndroidManifest.xml
+++ b/Alert/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.alertpreparedness.platform.alert">
+<manifest package="org.alertpreparedness.platform.alert"
+          xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
         android:name=".AlertApplication"
@@ -19,11 +19,9 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-
         <activity
             android:name=".login.activity.LoginScreen"
-            android:theme="@style/Theme.AppCompat.NoActionBar" />
-
+            android:theme="@style/Theme.AppCompat.NoActionBar"/>
         <activity
             android:name=".dashboard.activity.HomeScreen"
             android:theme="@style/AppTheme.NoActionBar"/>
@@ -32,6 +30,11 @@
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts"/>
 
+        <activity
+            android:name=".risk_monitoring.RiskMonitoringActivity"
+            android:label="@string/title_activity_risk_monitoring"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
     </application>
 
 </manifest>
