--- a/Alert/app/build.gradle
+++ b/Alert/app/build.gradle
@@ -57,6 +57,10 @@ dependencies {
     //views
     compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
+    //async
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    compile 'io.reactivex.rxjava2:rxjava:2.1.6'
 }
 
 // ADD THIS AT THE BOTTOM
