--- a/Alert/app/src/main/AndroidManifest.xml
+++ b/Alert/app/src/main/AndroidManifest.xml
@@ -14,24 +14,23 @@
             android:name=".login.activity.SplashActivity"
             android:theme="@style/SplashTheme">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".login.activity.LoginScreen"
-            android:theme="@style/Theme.AppCompat.NoActionBar" />
-
+            android:theme="@style/SplashTheme" />
         <activity
-            android:name=".dashboard.activity.HomeScreen"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:name=".dashboard.activity.HomeScreen"/>
 
         <meta-data
             android:name="preloaded_fonts"
-            android:resource="@array/preloaded_fonts"/>
+            android:resource="@array/preloaded_fonts" />
 
+        <activity
+            android:name=".MainDrawer" />
     </application>
 
 </manifest>
