--- a/Alert/app/build.gradle
+++ b/Alert/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     // Glide image library
     implementation 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'de.hdodenhof:circleimageview:2.2.0'
     //time processing
     compile 'net.danlew:android.joda:2.9.9.1'
     // FAB
@@ -57,11 +58,17 @@ dependencies {
     //views
     compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-
     //async
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.1.6'
+    //kotlin
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    compile "org.jetbrains.anko:anko:0.10.2"
+    //for recycler view
+    compile 'com.thoughtbot:expandablerecyclerview:1.3'
 }
 
 // ADD THIS AT THE BOTTOM
 apply plugin: 'com.google.gms.google-services'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
