--- a/Alert/app/build.gradle
+++ b/Alert/app/build.gradle
@@ -9,6 +9,8 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
+
     }
     buildTypes {
         release {
@@ -66,6 +68,10 @@ dependencies {
     compile "org.jetbrains.anko:anko:0.10.2"
     //for recycler view
     compile 'com.thoughtbot:expandablerecyclerview:1.3'
+    //Architecture Components
+    implementation "android.arch.lifecycle:common-java8:1.0.0"
+    implementation "android.arch.lifecycle:extensions:1.0.0"
+
 }
 
 // ADD THIS AT THE BOTTOM
