--- a/Alert/app/build.gradle
+++ b/Alert/app/build.gradle
@@ -62,6 +62,9 @@ dependencies {
     //views
     compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
+    //Gson Library
+    compile 'com.google.code.gson:gson:2.8.2'
 }
 
 // ADD THIS AT THE BOTTOM
