--- a/Alert/app/build.gradle
+++ b/Alert/app/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     //async
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.1.6'
+    compile 'com.github.frangsierra:rx2firebase:1.1.3'
     //kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     compile "org.jetbrains.anko:anko:0.10.2"
