--- a/Alert/app/build.gradle
+++ b/Alert/app/build.gradle
@@ -65,6 +65,7 @@ dependencies {
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.1.6'
     compile 'com.github.frangsierra:rx2firebase:1.1.3'
+    compile 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.4@aar'
     //kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     compile "org.jetbrains.anko:anko:0.10.2"
@@ -75,6 +76,8 @@ dependencies {
     implementation "android.arch.lifecycle:extensions:1.0.0"
     //json
     compile 'com.google.code.gson:gson:2.8.2'
+    //google play location
+    compile 'com.google.android.gms:play-services-location:11.4.2'
 
 }
 
