--- a/Alert/app/src/main/AndroidManifest.xml
+++ b/Alert/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest package="org.alertpreparedness.platform.alert"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+          xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
@@ -56,25 +56,38 @@
             android:name=".risk_monitoring.view.SelectAreaActivity"
             android:label="@string/title_activity_select_area"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name=".dashboard.activity.CreateAlertActivity"
             android:label="@string/title_activity_create_alert"
-            android:screenOrientation="portrait" />
-        <activity android:name=".dashboard.activity.AlertDetailActivity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".dashboard.activity.AlertDetailActivity"
+            android:screenOrientation="portrait"
             android:parentActivityName=".dashboard.activity.HomeScreen"
             android:theme="@style/AppTheme.NoActionBar"/>
-        <meta-data android:name="android.support.PARENT_ACTIVITY"
-            android:value=".dashboard.activity.HomeScreen"
-            android:theme="@style/AppTheme.NoActionBar"/>
+
+        <meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:value=".dashboard.activity.HomeScreen"/>
+
         <activity
             android:name=".risk_monitoring.view.UpdateIndicatorActivity"
             android:label="@string/title_activity_update_indicator"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme">
         </activity>
         <activity
             android:name=".risk_monitoring.view.LogIndicatorActivity"
             android:label="@string/title_activity_log_indicator"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme">
+        </activity>
+        <activity
+            android:name=".risk_monitoring.view.IndicatorLogActivity"
+            android:screenOrientation="portrait"
+            android:label="@string/title_activity_indicator_log"
             android:theme="@style/AppTheme">
         </activity>
     </application>
