--- a/Alert/app/build.gradle
+++ b/Alert/app/build.gradle
@@ -84,6 +84,9 @@ dependencies {
     //badge
     compile 'q.rorbin:badgeview:1.1.3'
 
+    compile 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
     implementation 'com.android.support:cardview-v7:26.1.0'
 }
 
