--- a/Alert/app/build.gradle
+++ b/Alert/app/build.gradle
@@ -88,6 +88,9 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
     implementation 'com.android.support:cardview-v7:26.1.0'
+
+    compile 'com.google.dagger:dagger:2.+'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.+'
 }
 
 // ADD THIS AT THE BOTTOM
