--- a/Alert/app/src/main/AndroidManifest.xml
+++ b/Alert/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
             android:name=".login.activity.LoginScreen"
             android:screenOrientation="portrait"/>
         <activity
-            android:name=".home.HomeScreen"
+            android:name=".dashboard.activity.HomeScreen"
             android:launchMode="singleTask"
             android:screenOrientation="portrait" />
 
@@ -66,14 +66,14 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".dashboard.activity.AlertDetailActivity"
-            android:parentActivityName=".home.HomeScreen"
+            android:parentActivityName=".dashboard.activity.HomeScreen"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
 
         <meta-data
             android:name="android.support.PARENT_ACTIVITY"
             android:theme="@style/AppTheme.NoActionBar"
-            android:value=".home.HomeScreen" />
+            android:value=".dashboard.activity.HomeScreen" />
 
         <activity
             android:name=".risk_monitoring.view.UpdateIndicatorActivity"
