--- a/Alert/app/src/main/AndroidManifest.xml
+++ b/Alert/app/src/main/AndroidManifest.xml
@@ -93,6 +93,11 @@
         <activity
             android:name=".dashboard.activity.UpdateAlertActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:theme="@style/AppTheme"
+            android:label="@string/progrmme_results"
+            android:name=".mycountry.ProgramResultsActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
