--- a/Alert/app/build.gradle
+++ b/Alert/app/build.gradle
@@ -94,6 +94,10 @@ dependencies {
 
     //Sheet menu
     compile 'com.github.whalemare:sheetmenu:1.3.3'
+
+    compile ('com.github.ozodrukh:CircularReveal:1.1.1@aar') {
+        transitive = true;
+    }
 }
 
 // ADD THIS AT THE BOTTOM
