--- a/Alert/app/build.gradle
+++ b/Alert/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'realm-android'
 
 android {
     compileSdkVersion 26
@@ -91,6 +92,7 @@ dependencies {
 
     compile 'com.google.dagger:dagger:2.+'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.+'
+//    compile 'io.realm:realm-android:4.1.1='
 
     //Sheet menu
     compile 'com.github.whalemare:sheetmenu:1.3.3'
