--- a/Alert/build.gradle
+++ b/Alert/build.gradle
@@ -1,19 +1,20 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
     ext.kotlin_version = '1.2.0'
 
     repositories {
         google()
         jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.0-alpha03'
         classpath 'com.google.gms:google-services:3.1.1'
-
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "io.realm:realm-gradle-plugin:4.1.1"
+
     }
 }
 
@@ -26,6 +27,7 @@ allprojects {
             url "https://maven.google.com" // Google's Maven repository
         }
     }
+
 }
 
 task clean(type: Delete) {
