add logout popup

--- a/Alert/app/src/main/AndroidManifest.xml
+++ b/Alert/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
         <activity
             android:name=".login.activity.LoginScreen"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan|adjustResize" />
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".dashboard.activity.HomeScreen"
             android:launchMode="singleTask"
