do initial work on inactive apa fragment

--- a/Alert/app/src/main/AndroidManifest.xml
+++ b/Alert/app/src/main/AndroidManifest.xml
@@ -119,6 +119,9 @@
         <activity
             android:name=".adv_preparedness.activity.CreateAPAActivity"
             android:label="@string/txt_create_apa" />
+        <activity
+            android:name=".adv_preparedness.activity.EditAPAActivity"
+            android:label="@string/edit_apa" />
     </application>
 
 </manifest>
