--- a/Alert/app/build.gradle
+++ b/Alert/app/build.gradle
@@ -105,6 +105,9 @@ dependencies {
     compile('com.github.ozodrukh:CircularReveal:1.1.1@aar') {
         transitive = true;
     }
+
+    implementation 'com.firebase:firebase-jobdispatcher:0.8.5'
+
 }
 
 // ADD THIS AT THE BOTTOM
