--- a/Alert/.gitignore
+++ b/Alert/.gitignore
@@ -42,7 +42,7 @@ captures/
 /build
 /captures
 .idea/workspace.xml
-.idea/tasks.xml
+.idea/task.xml
 .idea/gradle.xml
 .idea/dictionaries
 .idea/libraries
