--- a/Alert/app/build.gradle
+++ b/Alert/app/build.gradle
@@ -47,12 +47,12 @@ dependencies {
     // FAB
     compile 'com.github.clans:fab:1.6.4'
     // Firebase
-    compile 'com.google.firebase:firebase-core:11.6.0'
-    compile 'com.google.firebase:firebase-database:11.6.0'
-    compile 'com.google.firebase:firebase-auth:11.6.0'
-    compile 'com.google.firebase:firebase-storage:11.6.0'
-    compile 'com.google.firebase:firebase-messaging:11.6.0'
-    compile 'com.google.firebase:firebase-crash:11.6.0'
+    compile 'com.google.firebase:firebase-core:11.8.0'
+    compile 'com.google.firebase:firebase-database:11.8.0'
+    compile 'com.google.firebase:firebase-auth:11.8.0'
+    compile 'com.google.firebase:firebase-storage:11.8.0'
+    compile 'com.google.firebase:firebase-messaging:11.8.0'
+    compile 'com.google.firebase:firebase-crash:11.8.0'
 
     //toast
     compile 'com.github.GrenderG:Toasty:1.2.5'
@@ -83,7 +83,7 @@ dependencies {
     //json
     compile 'com.google.code.gson:gson:2.8.2'
     //google play location
-    compile 'com.google.android.gms:play-services-location:11.6.0'
+    compile 'com.google.android.gms:play-services-location:11.8.0'
     //badge
     compile 'q.rorbin:badgeview:1.1.3'
 
@@ -107,6 +107,7 @@ dependencies {
     }
 
     implementation 'com.firebase:firebase-jobdispatcher:0.8.5'
+    compile 'com.android.support:multidex:1.0.3'
 
 }
 
