--- a/Alert/app/build.gradle
+++ b/Alert/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'realm-android'
+apply plugin: 'io.fabric'
 
 android {
     compileSdkVersion 26
@@ -112,7 +113,11 @@ dependencies {
 
     compile 'com.evernote:android-job:1.2.4'
 
+    compile('com.crashlytics.sdk.android:crashlytics:2.9.1@aar') {
+        transitive = true
+    }
 
+    compile 'com.google.firebase:firebase-core:11.8.0'
 }
 
 // ADD THIS AT THE BOTTOM
