--- a/Alert/build.gradle
+++ b/Alert/build.gradle
@@ -6,6 +6,9 @@ buildscript {
         google()
         jcenter()
         mavenCentral()
+        maven {
+            url 'https://maven.fabric.io/public'
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.0-alpha04'
@@ -14,6 +17,7 @@ buildscript {
         // in the individual module build.gradle files
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "io.realm:realm-gradle-plugin:4.1.1"
+        classpath 'io.fabric.tools:gradle:1.25.1'
 
     }
 }
