--- a/Alert/app/build.gradle
+++ b/Alert/app/build.gradle
@@ -13,7 +13,7 @@ android {
         minSdkVersion 17
         targetSdkVersion 28
         versionCode 1
-        versionName "1.0"
+        versionName "0.2"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
@@ -138,7 +138,7 @@ dependencies {
     implementation 'com.github.matthiasrobbers:shortbread:1.0.2'
     kapt 'com.github.matthiasrobbers:shortbread-compiler:1.0.2'
     implementation('com.github.ozodrukh:CircularReveal:1.1.1@aar') {
-        transitive = true;
+        transitive = true
     }
 
     implementation 'com.firebase:firebase-jobdispatcher:0.8.5'
