--- a/Alert/app/src/main/AndroidManifest.xml
+++ b/Alert/app/src/main/AndroidManifest.xml
@@ -4,54 +4,44 @@
     package="org.alertpreparedness.platform.v1">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <!-- <uses-permission android:name="android.permission.CAMERA" /> -->
-
-
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" /> <!-- <uses-permission android:name="android.permission.CAMERA" /> -->
     <!-- Leak canary needs access to External storage to save heap dumps -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-
-
-    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE"/>
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
 
     <application
-        android:name="AlertApplication"
+        android:name=".AlertApplication"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        tools:replace="android:allowBackup"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:theme="@style/AppTheme"
+        tools:replace="android:allowBackup">
+        <activity android:name="org.alertpreparedness.platform.v2.mycountry.ProgramResultsActivity"></activity>
 
-        android:theme="@style/AppTheme">
         <service
-            android:exported="false"
-            android:name="offline.SyncJobService">
+            android:name="offline.SyncJobService"
+            android:exported="false">
             <intent-filter>
-                <action android:name="com.firebase.jobdispatcher.ACTION_EXECUTE"/>
+                <action android:name="com.firebase.jobdispatcher.ACTION_EXECUTE" />
             </intent-filter>
         </service>
         <service
-            android:exported="false"
-            android:name=".notifications.IndicatorNotificationService">
-        </service>
+            android:name=".notifications.IndicatorNotificationService"
+            android:exported="false"></service>
         <service
-            android:exported="false"
-            android:name=".notifications.ActionNotificationService">
-        </service>
-
-        <service
-            android:name=".notifications.AlertFirebaseMessagingService">
+            android:name=".notifications.ActionNotificationService"
+            android:exported="false"></service>
+        <service android:name=".notifications.AlertFirebaseMessagingService">
             <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-
-        <service
-            android:name=".notifications.AlertFirebaseInstanceIDService">
+        <service android:name=".notifications.AlertFirebaseInstanceIDService">
             <intent-filter>
-                <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
             </intent-filter>
         </service>
 
@@ -77,13 +67,14 @@
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
-        <meta-data android:name="com.google.firebase.messaging.default_notification_icon"
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_icon"
             android:resource="@drawable/alert_logo" />
+        <meta-data
+            android:name="firebase_crashlytics_collection_enabled"
+            android:value="false" />
 
-        <meta-data android:name="firebase_crashlytics_collection_enabled" android:value="false" />
-
-        <activity android:name=".MainDrawer" />
-        <!-- <activity -->
+        <activity android:name=".MainDrawer" /> <!-- <activity -->
         <!-- android:name=".risk_monitoring.vRiskFragmentvity" -->
         <!-- android:label="@string/title_activity_risk" -->
         <!-- android:launchMode="singleTask" -->
@@ -164,8 +155,9 @@
         <activity
             android:name=".adv_preparedness.activity.EditAPAActivity"
             android:label="@string/edit_apa" />
-        <activity android:name=".min_preparedness.activity.ViewAttachmentsActivity"
-            android:label="@string/attachments"/>
+        <activity
+            android:name=".min_preparedness.activity.ViewAttachmentsActivity"
+            android:label="@string/attachments" />
     </application>
 
 </manifest>
