--- a/Alert/app/build.gradle
+++ b/Alert/app/build.gradle
@@ -11,7 +11,7 @@ android {
         applicationId "org.alertpreparedness.platform.alert"
         minSdkVersion 17
         targetSdkVersion 28
-        versionCode 1
+        versionCode 2
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
@@ -142,7 +142,7 @@ dependencies {
 
     implementation 'com.firebase:firebase-jobdispatcher:0.8.5'
     implementation 'androidx.multidex:multidex:2.0.1'
-    implementation 'com.google.guava:guava:24.1-jre'
+    implementation 'com.google.guava:guava:27.0.1-android'
 
     implementation 'com.evernote:android-job:1.2.4'
 
